@@ -75,7 +75,7 @@ struct MusicXmlPartGroup {
 const int MAX_LYRICS       = 8;
 const int MAX_PART_GROUPS  = 8;
 const int MAX_NUMBER_LEVEL = 6; // maximum number of overlapping MusicXML objects
-const int MAX_BRACKETS     = 8;
+const int MAX_BRACKETS     = 9; // 8;
 
 //---------------------------------------------------------
 //   CreditWords
